--- a/index.html
+++ b/index.html
@@ -486,7 +486,115 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subs">
+          <p class="social-title">Subscribe</p>
+          <form class="footer-form">
+            <label aria-label="footer-email" class="footer-label">
+              <input
+                type="email"
+                name="footer-email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
+            </label>
+            <button type="submit" class="footer-btn">
+              Subscribe
+              <svg class="send-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <div class="backdrop">
+      <div class="modal">
+        <div class="bnt-close-wrap">
+          <button type="button" class="close-btn">
+            <svg class="icon-close-black" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-black"></use>
+            </svg>
+          </button>
+        </div>
+        <p class="form-title">Leave your contacts and we will call you back</p>
+
+        <form class="modal-form">
+          <!-- Name -->
+          <div class="form-field">
+            <label class="form-label" for="input-name">Name</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="input-name"
+                id="input-name"
+                type="text"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
+          </div>
+          <!-- Phone -->
+          <div class="form-field">
+            <label class="form-label" for="input-phone">Phone</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="input-phone"
+                id="input-phone"
+                type="tel"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+          </div>
+          <!-- Email -->
+          <div class="form-field">
+            <label class="form-label" for="input-email">Email</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="input-email"
+                id="input-email"
+                type="email"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+          <!-- Comment -->
+          <div class="form-field">
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              class="modal-textarea"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="form-field">
+            <input
+              type="checkbox"
+              name="private-policy"
+              id="private-policy"
+              class="modal-check visually-hidden"
+              value="on"
+            />
+            <label for="private-policy" class="modal-check-text"
+              ><span class="modal-check-item"
+                ><svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check-icon"></use></svg
+              ></span>
+              I accept the terms and conditions of the
+              <a class="privacy-link">Privacy Policy</a></label
+            >
+          </div>
+          <button type="submit" class="modal-btn">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
