--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="close-btn">
           <svg class="icon-close-black" width="8" height="8">
